--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Samuel Onema</title>
-    <link rel="stylesheet" href="style.css"> <!-- Ajoute un fichier CSS si tu veux styliser -->
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body>
     <header>
@@ -12,31 +12,60 @@
         <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
     </header>
 
-    <section id="projet-snel">
-        <h2>Projet : Digitalisation des Documents pour la SNEL</h2>
-        <p>Ce projet visait à créer une application de gestion électronique des documents (GED) pour la Société Nationale d'Électricité (SNEL) en RDC.</p>
-        <h3>Description du Projet</h3>
-        <p>L’application a été développée pour digitaliser et sécuriser les documents d’entreprise, simplifier leur accès et leur stockage, et améliorer la traçabilité. Elle utilise Vue.js pour l’interface utilisateur et Node.js pour le back-end.</p>
-        
-        <h3>Technologies Utilisées</h3>
-        <ul>
-            <li>JavaScript (Vue.js, Node.js)</li>
-            <li>Base de données NoSQL</li>
-            <li>Figma pour le design</li>
-            <li>Star UML pour la modélisation</li>
-        </ul>
+    <main>
+        <section id="projet-snel">
+            <h2>Projet : Digitalisation des Documents pour la SNEL</h2>
+            <p>Ce projet visait à créer une application de gestion électronique des documents (GED) pour la Société Nationale d'Électricité (SNEL) en RDC.</p>
+            <h3>Description du Projet</h3>
+            <p>L’application a été développée pour digitaliser et sécuriser les documents d’entreprise, simplifier leur accès et leur stockage, et améliorer la traçabilité. Elle utilise Vue.js pour l’interface utilisateur et Node.js pour le back-end.</p>
+            
+            <h3>Technologies Utilisées</h3>
+            <ul>
+                <li>JavaScript (Vue.js, Node.js)</li>
+                <li>Base de données NoSQL</li>
+                <li>Figma pour le design</li>
+                <li>Star UML pour la modélisation</li>
+            </ul>
 
-        <h3>Fonctionnalités Principales</h3>
-        <ul>
-            <li>Recherche de documents par agents, catégories, et autres critères</li>
-            <li>Ajout et suppression de documents</li>
-            <li>Interface rapide et conviviale</li>
-        </ul>
+            <h3>Captures d'écran</h3>
+            <img src="images/capture1.png" alt="Capture d'écran de l'application" class="project-image">
+            <img src="images/capture2.png" alt="Capture d'écran de l'application" class="project-image">
+        </section>
 
-        <h3>Captures d'écran</h3>
-        <img src="images/capture1.png" alt="Capture d'écran de l'application" style="width:100%; max-width:600px;">
-        <img src="images/capture2.png" alt="Capture d'écran de l'application" style="width:100%; max-width:600px;">
-    </section>
+        <section id="projet-ecommerce">
+            <h2>Projet : Application de Vente en Ligne avec Python</h2>
+            <p>Cette application permet de gérer un système de vente en ligne avec diverses fonctionnalités, y compris la gestion des utilisateurs et des produits.</p>
+            <h3>Technologies Utilisées</h3>
+            <ul>
+                <li>Python (Django)</li>
+                <li>HTML, CSS, JavaScript</li>
+            </ul>
+            <h3>Captures d'écran</h3>
+            <img src="images/ecommerce_capture.png" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
+            <h3>Vidéo Démonstration</h3>
+            <video width="320" height="240" controls>
+                <source src="videos/ecommerce_demo.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la vidéo.
+            </video>
+        </section>
+
+        <section id="projet-site-web">
+            <h2>Projet : Site Web en JavaScript</h2>
+            <p>Un site web dynamique développé avec JavaScript, offrant des fonctionnalités interactives et une interface utilisateur conviviale.</p>
+            <h3>Technologies Utilisées</h3>
+            <ul>
+                <li>JavaScript</li>
+                <li>HTML, CSS</li>
+            </ul>
+            <h3>Captures d'écran</h3>
+            <img src="images/siteweb_capture.png" alt="Capture d'écran du site web" class="project-image">
+            <h3>Vidéo Démonstration</h3>
+            <video width="320" height="240" controls>
+                <source src="videos/siteweb_demo.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la vidéo.
+            </video>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 Samuel Onema. Tous droits réservés.</p>
