--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
             </ul>
 
             <h3>Captures d'écran</h3>
-            <img src="images/capture1.png" alt="Capture d'écran de l'application" class="project-image">
-            <img src="images/capture2.png" alt="Capture d'écran de l'application" class="project-image">
+            <img src="images/imgsnel1.png" alt="Capture d'écran de l'application" class="project-image">
+            <img src="images/imgsnel2.png" alt="Capture d'écran de l'application" class="project-image">
+            <h3>Vidéo Démonstration</h3>
+            <video width="320" height="240" controls>
+                <source src="videos/siteweb_demo.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la vidéo.
+            </video>
         </section>
 
         <section id="projet-ecommerce">
@@ -41,7 +46,7 @@
                 <li>HTML, CSS, JavaScript</li>
             </ul>
             <h3>Captures d'écran</h3>
-            <img src="images/ecommerce_capture.png" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
+            <img src="images/imgpy.png" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
             <h3>Vidéo Démonstration</h3>
             <video width="320" height="240" controls>
                 <source src="videos/ecommerce_demo.mp4" type="video/mp4">
@@ -58,12 +63,8 @@
                 <li>HTML, CSS</li>
             </ul>
             <h3>Captures d'écran</h3>
-            <img src="images/siteweb_capture.png" alt="Capture d'écran du site web" class="project-image">
-            <h3>Vidéo Démonstration</h3>
-            <video width="320" height="240" controls>
-                <source src="videos/siteweb_demo.mp4" type="video/mp4">
-                Votre navigateur ne supporte pas la vidéo.
-            </video>
+            <img src="images/siteweb.png" alt="Capture d'écran du site web" class="project-image">
+
         </section>
     </main>
 
