--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="images/imgsnel2.png" alt="Capture d'écran de l'application" class="project-image">
             <h3>Vidéo Démonstration</h3>
             <video width="320" height="240" controls>
-                <source src="videos/siteweb_demo.mp4" type="video/mp4">
+                <source src="videos/snelvid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la vidéo.
             </video>
         </section>
@@ -46,12 +46,8 @@
                 <li>HTML, CSS, JavaScript</li>
             </ul>
             <h3>Captures d'écran</h3>
-            <img src="images/imgpy.png" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
-            <h3>Vidéo Démonstration</h3>
-            <video width="320" height="240" controls>
-                <source src="videos/ecommerce_demo.mp4" type="video/mp4">
-                Votre navigateur ne supporte pas la vidéo.
-            </video>
+            <img src="images/imgpy.PNG" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
+
         </section>
 
         <section id="projet-site-web">
@@ -64,7 +60,11 @@
             </ul>
             <h3>Captures d'écran</h3>
             <img src="images/siteweb.png" alt="Capture d'écran du site web" class="project-image">
-
+            <h3>Vidéo Démonstration</h3>
+            <video width="320" height="240" controls>
+                <source src="videos/webvid.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la vidéo.
+            </video>
         </section>
     </main>
 
