--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="images/imgsnel2.png" alt="Capture d'écran de l'application" class="project-image">
             <h3>Vidéo Démonstration</h3>
             <video width="320" height="240" controls>
-                <source src="videos/snelvid.mp4" type="video/mp4">
+                <source src="images/videos/snelvid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la vidéo.
             </video>
         </section>
@@ -62,7 +62,7 @@
             <img src="images/siteweb.png" alt="Capture d'écran du site web" class="project-image">
             <h3>Vidéo Démonstration</h3>
             <video width="320" height="240" controls>
-                <source src="videos/webvid.mp4" type="video/mp4">
+                <source src="images/videos/webvid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la vidéo.
             </video>
         </section>
