--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Samuel Onema - Portfolio</h1>
-        <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
+        <div class="header-content">
+            <img src="images/ma_photo.jpg" alt="Ma Photo" class="profile-photo"> <!-- Remplacez 'ma_photo.jpg' par le nom de votre image -->
+            <h1>Samuel Onema</h1>
+            <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
+        </div>
     </header>
 
     <main>
+        <section class="about-me">
+            <h2>À propos de moi</h2>
+            <p>Je suis un ingénieur informaticien passionné par le développement web et la gestion électronique de documents. J'aime relever des défis techniques et créer des solutions innovantes.</p>
+        </section>
+
         <section id="projet-snel">
             <h2>Projet : Digitalisation des Documents pour la SNEL</h2>
             <p>Ce projet visait à créer une application de gestion électronique des documents (GED) pour la Société Nationale d'Électricité (SNEL) en RDC.</p>
@@ -31,7 +39,7 @@
             <img src="images/imgsnel1.png" alt="Capture d'écran de l'application" class="project-image">
             <img src="images/imgsnel2.png" alt="Capture d'écran de l'application" class="project-image">
             <h3>Vidéo Démonstration</h3>
-            <video width="320" height="240" controls>
+            <video controls class="responsive-video">
                 <source src="images/videos/snelvid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la vidéo.
             </video>
@@ -47,7 +55,6 @@
             </ul>
             <h3>Captures d'écran</h3>
             <img src="images/imgpy.PNG" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
-
         </section>
 
         <section id="projet-site-web">
@@ -61,7 +68,7 @@
             <h3>Captures d'écran</h3>
             <img src="images/siteweb.png" alt="Capture d'écran du site web" class="project-image">
             <h3>Vidéo Démonstration</h3>
-            <video width="320" height="240" controls>
+            <video controls class="responsive-video">
                 <source src="images/videos/webvid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la vidéo.
             </video>
