--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/ma_photo.jpg" alt="Ma Photo" class="profile-photo"> <!-- Remplacez 'ma_photo.jpg' par le nom de votre image -->
-            <h1>Samuel Onema</h1>
-            <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
+            <img src="images/photo_samuel.jpg" alt="Photo de Samuel Onema" class="profile-photo">
+            <div class="header-text">
+                <h1>Samuel Onema</h1>
+                <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
+            </div>
         </div>
+        <nav>
+            <ul>
+                <li><a href="#projet-snel">Mes Réalisations</a></li>
+                <li><a href="#about">À Propos</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <section class="about-me">
-            <h2>À propos de moi</h2>
-            <p>Je suis un ingénieur informaticien passionné par le développement web et la gestion électronique de documents. J'aime relever des défis techniques et créer des solutions innovantes.</p>
-        </section>
-
         <section id="projet-snel">
             <h2>Projet : Digitalisation des Documents pour la SNEL</h2>
             <p>Ce projet visait à créer une application de gestion électronique des documents (GED) pour la Société Nationale d'Électricité (SNEL) en RDC.</p>
@@ -39,7 +43,7 @@
             <img src="images/imgsnel1.png" alt="Capture d'écran de l'application" class="project-image">
             <img src="images/imgsnel2.png" alt="Capture d'écran de l'application" class="project-image">
             <h3>Vidéo Démonstration</h3>
-            <video controls class="responsive-video">
+            <video width="100%" height="auto" controls>
                 <source src="images/videos/snelvid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la vidéo.
             </video>
@@ -68,7 +72,7 @@
             <h3>Captures d'écran</h3>
             <img src="images/siteweb.png" alt="Capture d'écran du site web" class="project-image">
             <h3>Vidéo Démonstration</h3>
-            <video controls class="responsive-video">
+            <video width="100%" height="auto" controls>
                 <source src="images/videos/webvid.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la vidéo.
             </video>
