--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/photo_samuel.jpg" alt="Photo de Samuel Onema" class="profile-photo">
+            <img src="images/ma_photo.jpg" alt="Photo de Samuel Onema" class="profile-photo">
             <div class="header-text">
                 <h1>Samuel Onema</h1>
                 <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
