--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/ma_photo.jpg" alt="Photo de Samuel Onema" class="profile-photo">
+            <img src="images/ma_photo.jpg" alt="Photo de Samuel Onema" class="profile-photo"> <!-- Assurez-vous d'avoir une photo ici -->
             <div class="header-text">
                 <h1>Samuel Onema</h1>
                 <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
@@ -27,7 +27,7 @@
     <main>
         <section id="apropos">
             <h2>À propos</h2>
-            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement des applications web sur mesure, de leur conception à leur mise en service.</p>
+            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement de sites web sur mesure, de leur conception à leur mise en ligne.</p>
         </section>
 
         <section id="realisation">
@@ -48,10 +48,8 @@
                 </ul>
 
                 <h4>Captures d'écran</h4>
-                <div class="image-gallery">
-                    <img src="images/imgsnel1.png" alt="Capture d'écran de l'application" class="project-image">
-                    <img src="images/imgsnel2.png" alt="Capture d'écran de l'application" class="project-image">
-                </div>
+                <img src="images/imgsnel1.png" alt="Capture d'écran de l'application" class="project-image">
+                <img src="images/imgsnel2.png" alt="Capture d'écran de l'application" class="project-image">
                 <h4>Vidéo Démonstration</h4>
                 <video controls>
                     <source src="images/videos/snelvid.mp4" type="video/mp4">
@@ -68,9 +66,7 @@
                     <li>HTML, CSS, JavaScript</li>
                 </ul>
                 <h4>Captures d'écran</h4>
-                <div class="image-gallery">
-                    <img src="images/imgpy.PNG" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
-                </div>
+                <img src="images/imgpy.PNG" alt="Capture d'écran de l'application de vente en ligne" class="project-image">
             </div>
 
             <div class="project">
@@ -82,9 +78,7 @@
                     <li>HTML, CSS</li>
                 </ul>
                 <h4>Captures d'écran</h4>
-                <div class="image-gallery">
-                    <img src="images/siteweb.png" alt="Capture d'écran du site web" class="project-image">
-                </div>
+                <img src="images/siteweb.png" alt="Capture d'écran du site web" class="project-image">
                 <h4>Vidéo Démonstration</h4>
                 <video controls>
                     <source src="images/videos/webvid.mp4" type="video/mp4">
