--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section id="apropos">
             <h2>À propos</h2>
-            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement de sites web sur mesure, de leur conception à leur mise en ligne.</p>
+            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement des applications web sur mesure, de leur conception à leur mise en service.</p>
         </section>
 
         <section id="realisation">
