--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/ma_photo.jpg" alt="Photo de Samuel Onema" class="profile-photo"> <!-- Assurez-vous d'avoir une photo ici -->
+            <img src="images/ma_photo.jpg" alt="Photo de Samuel Onema" class="profile-photo">
             <div class="header-text">
                 <h1>Samuel Onema</h1>
                 <p>Ingénieur Informaticien | Développeur Full Stack Junior</p>
@@ -27,7 +27,7 @@
     <main>
         <section id="apropos">
             <h2>À propos</h2>
-            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement des applications web sur mesure, de leur conception à leur mise en service.</p>
+            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement de sites web sur mesure, de leur conception à leur mise en ligne.</p>
         </section>
 
         <section id="realisation">
@@ -86,10 +86,22 @@
                 </video>
             </div>
         </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Vous pouvez me joindre par les moyens suivants :</p>
+            <ul>
+                <li><strong>Email :</strong> samuel.onema@example.com</li>
+                <li><strong>Téléphone :</strong> +243 123 456 789</li>
+                <li><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/votreprofil" target="_blank">Mon profil LinkedIn</a></li>
+                <li><strong>GitHub :</strong> <a href="https://github.com/samuelonema" target="_blank">Mon GitHub</a></li>
+            </ul>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Samuel Onema. Tous droits réservés.</p>
+        <p>Contactez-moi : samuel.onema@example.com | +243 123 456 789</p>
     </footer>
 </body>
 </html>
