--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section id="apropos">
             <h2>À propos</h2>
-            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement de sites web sur mesure, de leur conception à leur mise en ligne.</p>
+            <p>Depuis maintenant 5 ans, je me suis pris de passion pour le développement web et l'UX Design. Mes compétences diverses me permettent de proposer le développement des applications web sur mesure, de leur conception à leur mise en service.</p>
         </section>
 
         <section id="realisation">
@@ -91,17 +91,17 @@
             <h2>Contact</h2>
             <p>Vous pouvez me joindre par les moyens suivants :</p>
             <ul>
-                <li><strong>Email :</strong> samuel.onema@example.com</li>
-                <li><strong>Téléphone :</strong> +243 123 456 789</li>
-                <li><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/votreprofil" target="_blank">Mon profil LinkedIn</a></li>
-                <li><strong>GitHub :</strong> <a href="https://github.com/samuelonema" target="_blank">Mon GitHub</a></li>
+                <li><strong>Email :</strong> samuel.onema@2026.ulc-icam.com</li>
+                <li><strong>Téléphone :</strong> +243 975 669 187</li>
+                <li><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/samuel-onema-830954287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Mon profil LinkedIn</a></li>
+                <li><strong>GitHub :</strong> <a href="https://github.com/Samuel57-svg" target="_blank">Mon GitHub</a></li>
             </ul>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Samuel Onema. Tous droits réservés.</p>
-        <p>Contactez-moi : samuel.onema@example.com | +243 123 456 789</p>
+        <p>Contactez-moi : samuel.onema@2026.ulc-icam.com | +243 975 669 187</p>
     </footer>
 </body>
 </html>
