--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <p>Vous pouvez me joindre par les moyens suivants :</p>
             <ul>
                 <li><strong>Email :</strong> samuel.onema@2026.ulc-icam.com</li>
+                <li><strong>Email :</strong> <a href="mailto:samuel.onema@2026.ulc-icam.com">samuel.onema@2026.ulc-icam.com</a></li>
                 <li><strong>Téléphone :</strong> +243 975 669 187</li>
                 <li><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/samuel-onema-830954287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Mon profil LinkedIn</a></li>
                 <li><strong>GitHub :</strong> <a href="https://github.com/Samuel57-svg" target="_blank">Mon GitHub</a></li>
@@ -101,7 +102,7 @@
 
     <footer>
         <p>&copy; 2024 Samuel Onema. Tous droits réservés.</p>
-        <p>Contactez-moi : samuel.onema@2026.ulc-icam.com | +243 975 669 187</p>
+        <p>Contactez-moi : <a href="mailto:samuel.onema@2026.ulc-icam.com">samuel.onema@2026.ulc-icam.com</a> | +243 975 669 187</p>
     </footer>
 </body>
 </html>
